feat: add block version